--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,20 +1,162 @@
 @import './assets/fonts/Gilroy/stylesheet.css';
 @import './assets/fonts/Nekst/stylesheet.css';
+@import './assets/vars';
 
-$blue: #3bbfce;
+/* Указываем box sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Убираем внутренние отступы */
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+/* Убираем внешние отступы */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Упрощаем работу с изображениями */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Указываем понятную периодичность в потоке данных у article*/
+article > * + * {
+  margin-top: 1em;
+}
+
+/* Наследуем шрифты для инпутов и кнопок */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
 
 .app {
+  font-family: Nekst;
+  color: $black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   max-width: 1440px;
-  font-family: Nekst;
 
-  form {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    height: fit-content;
-    margin-top: 200px;
-    gap: 50px;
-    color: $blue
+  margin: auto;
+  padding: 0 47px;
+
+  .appWrapper {
+    width: 100%;
+
+    .mainText {
+      font-weight: 900;
+      font-size: 54px;
+      line-height: 90%;
+      display: block;
+    }
+
+
+    form {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 50px;
+      margin-top: 32px;
+
+      .title {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 24px;
+      }
+
+      .sum {
+        .mainText {
+          color: #333333;
+        }
+      }
+
+      .btn {
+        background: $orange;
+        border: none;
+        font-weight: 900;
+        font-size: 30px;
+        line-height: 36px;
+        color: white;
+        border-radius: 40px;
+        padding: 14px 18px 18px;
+        cursor: pointer;
+        width: 100%;
+        max-width: 426px;
+
+        &:hover {
+          background: $black;
+          transition: all 0.5s ease;
+        }
+
+        &:focus {
+          background: $grey;
+          transition: all 0.5s ease;
+        }
+
+        &:disabled {
+          background: rgba(255, 149, 20, 0.4);
+          transition: all 0.5s ease;
+          cursor: default;
+        }
+
+      }
+
+    }
   }
 }
