--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -2,6 +2,7 @@
 
 .slider {
   position: relative;
+  width: 100%;
 
   input {
     display: block;
@@ -10,12 +11,13 @@
   .number {
     background: #F3F3F4;
     border-radius: 16px;
-    padding: 16px 24px;
+    padding: 20px;
     font-weight: 900;
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 22px;
+    line-height: 20px;
     color: $grey;
     border: none;
+    width: 100%;
   }
 
   input[type=range] {
@@ -24,7 +26,7 @@
     left: 20px;
     -webkit-appearance: none;
     margin: 10px 0;
-    width: 90%;
+    width: calc(100% - 40px);
   }
 
   input[type=range]::-webkit-slider-runnable-track {
