--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -92,16 +92,19 @@ select {
   align-items: center;
   min-width: 320px;
   max-width: 1440px;
-
-  margin: auto;
-  padding: 0 47px;
+  margin: 44px 0 64px;
+  padding: 0 20px;
 
   .appWrapper {
     width: 100%;
 
-    .mainText {
+    input {
+      outline: none;
+    }
+
+    h1 {
       font-weight: 900;
-      font-size: 54px;
+      font-size: 34px;
       line-height: 90%;
       display: block;
     }
@@ -109,20 +112,31 @@ select {
 
     form {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 50px;
+      grid-template-columns: 1fr;
+      gap: 20px;
       margin-top: 32px;
+
+      .item {
+        width: 100%;
+      }
+
+      .item:nth-child(4) {
+        margin-top: 100px;
+      }
 
       .title {
         font-weight: 400;
-        font-size: 16px;
-        line-height: 20px;
-        margin-bottom: 24px;
+        font-size: 14px;
+        line-height: 136%;
+        margin-bottom: 8px;
       }
 
       .sum {
         .mainText {
           color: #333333;
+          font-weight: 900;
+          font-size: 22px;
+          line-height: 20px;
         }
       }
 
@@ -130,14 +144,15 @@ select {
         background: $orange;
         border: none;
         font-weight: 900;
-        font-size: 30px;
-        line-height: 36px;
+        font-size: 22px;
+        line-height: 20px;
         color: white;
         border-radius: 40px;
-        padding: 14px 18px 18px;
+        padding: 18px 18px 22px;
         cursor: pointer;
         width: 100%;
-        max-width: 426px;
+        height: fit-content;
+        align-self: center;
 
         &:hover {
           background: $black;
@@ -155,8 +170,42 @@ select {
           cursor: default;
         }
 
-      }
+        .image {
+          -webkit-animation: spin 1s linear infinite;
+          -moz-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
+        }
 
+        @-moz-keyframes spin {
+          100% {
+            -moz-transform: rotate(360deg);
+          }
+        }
+        @-webkit-keyframes spin {
+          100% {
+            -webkit-transform: rotate(360deg);
+          }
+        }
+        @keyframes spin {
+          100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+          }
+        }
+      }
     }
+  }
+}
+
+@media (min-width: 767px) {
+  .app {
+    margin: 64px 0 156px;
+
+    .appWrapper {
+      h1 {
+        font-size: 54px;
+      }
+    }
+
   }
 }
