--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -10,42 +10,94 @@
 
   .number {
     background: #F3F3F4;
-    border-radius: 16px;
-    padding: 20px;
+    border-radius: 1rem;
+    padding: 1.25rem;
     font-weight: 900;
-    font-size: 22px;
-    line-height: 20px;
+    font-size: 1.375rem;
+    line-height: 1.25rem;
     color: $grey;
-    border: none;
     width: 100%;
+    border: 2px solid #F3F3F4;
+  }
+
+
+  .number::-webkit-outer-spin-button,
+  .number::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  .number[type=number] {
+    -moz-appearance: textfield;
+  }
+
+  .number:focus {
+    background: transparent;
+  }
+
+  .number[disabled] {
+    color: $grey;
+    background: #F3F3F4;
+  }
+
+  .text {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+    font-weight: 900;
+    font-size: 1.375rem;
+    line-height: 1.25rem;
+    color: $grey;
   }
 
   input[type=range] {
     position: absolute;
-    bottom: -10px;
-    left: 20px;
+    bottom: -0.625rem;
+    left: 1.25rem;
     -webkit-appearance: none;
-    margin: 10px 0;
-    width: calc(100% - 40px);
+    margin: 0.625rem 0;
+    width: calc(100% - 2.5rem);
+
   }
+
 
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 2px;
+    height: 0.125rem;
     cursor: pointer;
     animate: 0.2s;
     background: $orange;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
   }
 
   input[type=range]::-webkit-slider-thumb {
-    height: 20px;
-    width: 20px;
+    height: 1.25rem;
+    width: 1.25rem;
     border-radius: 50%;
     background: $orange;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -8px;
+    margin-top: -0.5rem;
   }
+
+}
+
+@media (min-width: 767px) {
+  .slider {
+    .number {
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+      padding: 1rem 1.5rem;
+    }
+
+    .text {
+      top: 1rem;
+      right: 1rem;
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+    }
+  }
+
 
 }
