--- a/src/components/SliderPercent/SliderPercent.module.scss
+++ b/src/components/SliderPercent/SliderPercent.module.scss
@@ -9,58 +9,81 @@
 
   .number {
     background: #F3F3F4;
-    border-radius: 16px;
-    padding: 20px;
+    border-radius: 1rem;
+    padding: 1.25rem;
     font-weight: 900;
-    font-size: 22px;
-    line-height: 20px;
+    font-size: 1.375rem;
+    line-height: 1.25rem;
     color: $grey;
     border: none;
   }
 
   .percent {
     position: absolute;
-    top: 6px;
-    right: 6px;
-    width: 67px;
-    height: 48px;
-    border-radius: 10px;
+    top: 0.375rem;
+    right: 0.375rem;
+    width: 4.1875rem;
+    height: 3rem;
+    border-radius: 0.625rem;
     background: #EBEBEC;
     border: none;
     text-align: center;
     font-weight: 900;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 120%;
     color: $grey;
 
   }
 
+
   input[type=range] {
     position: absolute;
-    bottom: -10px;
-    left: 20px;
+    bottom: -0.625rem;
+    left: 1.25rem;
     -webkit-appearance: none;
-    margin: 10px 0;
-    width: calc(100% - 40px);
+    margin: 0.625rem 0;
+    width: calc(100% - 2.5rem);
   }
 
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 2px;
+    height: 0.125rem;
     cursor: pointer;
     animate: 0.2s;
     background: $orange;
-    border-radius: 5px;
+    border-radius: 0.3145rem;
   }
 
   input[type=range]::-webkit-slider-thumb {
-    height: 20px;
-    width: 20px;
+    height: 1.25rem;
+    width: 1.25rem;
     border-radius: 50%;
     background: $orange;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -8px;
+    margin-top: -0.5rem;
+  }
+
+}
+
+
+@media (min-width: 767px) {
+  .sliderPercent {
+
+    .percent {
+      font-size: 1.25rem;
+      line-height: 120%;
+      width: 4.375rem;
+      height: 3.375rem;
+      top: 0.4375rem;
+      right: 0.4375rem;
+    }
+
+    .number {
+      font-size: 1.875rem;
+      line-height: 2.25rem;
+      padding: 1rem 1.5rem;
+    }
   }
 
 }
